# Projet_Drone_2025

./: README.md
Etudiant1-Benjamin/interfaces_web/Controleurs/: controleur.php  controleur_utilisateur.php
Etudiant1-Benjamin/interfaces_web/Modeles/: config.inc.php  modele.inc.php  modele_utilisateurs.inc.php
Etudiant1-Benjamin/interfaces_web/Vues/: connexion.php  historique.php  index.php  menu.php  vues.js
Etudiant1-Benjamin/interfaces_web/nbproject/private/: private.xml
Etudiant2-Noé/: Readme.md
Etudiant2-Noé/Panel/: Readme.md
Etudiant2-Noé/Serv http/: Readme.md  widget.cpp  widget.h  widget.ui
Etudiant3-Lenny/Code Serveur-HTTP/: Readme.md
Etudiant3-Lenny/Code Serveur-HTTP/servwebFin/: servweb.pro.user.af8b6cf  widget.cpp  widget.h
Etudiant3-Lenny/PartieDeCode/Communication/: README.md
Etudiant3-Lenny/PartieDeCode/Objectifs/: README.md
Etudiant3-Lenny/PartieDeCodeUnrealEngine/Communication/: README.md
Etudiant3-Lenny/PartieDeCodeUnrealEngine/Conditions météorologiques/: README.md
Etudiant3-Lenny/PartieDeCodeUnrealEngine/Objectifs/: README.md
Etudiant3-Lenny/Serveur-HTTP/servwebFin/: widget.cpp
Etudiant4-Alexis/: Readme.md
Etudiant4-Alexis/ApplicationMobile/: CMakeLists.txt  Main.qml  Readme.md
Etudiant4-Alexis/LaRadiocommande/: Readme.md  main.cpp  radiocommande.cpp  radiocommande.h
